<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="2dp"
    android:layout_marginVertical="2dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <EditText
        android:id="@+id/filterDate"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:clickable="false"
        android:focusable="false"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radio_group"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/filter_category"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="102dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radio_group"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFilterMoneyHolder"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:focusable="false"
        android:hint="@string/bottomFilterHintMoneyHolder"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radio_group"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <AutoCompleteTextView
            android:id="@+id/actvFilterMoneyHolder"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintBottom_toBottomOf="@+id/tilFilterMoneyHolder"
            app:layout_constraintEnd_toEndOf="@+id/tilFilterMoneyHolder"
            app:layout_constraintStart_toStartOf="@+id/tilFilterMoneyHolder"
            app:layout_constraintTop_toTopOf="@+id/tilFilterMoneyHolder" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/bottomsheet_radiodate_text" />

        <RadioButton
            android:id="@+id/radio_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/bottomsheet_radiotheme_text" />

        <RadioButton
            android:id="@+id/radio_money_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/bottomsheet_radioauthor_text" />

        <RadioButton
            android:id="@+id/radio_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/buttomsheet_radiodelete_text" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>