<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_edit_operation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="2dp"
    android:layout_marginVertical="2dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:id="@+id/imageViewCategory"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="22dp"
        android:src="@drawable/ic_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description" />

    <TextView
        android:id="@+id/textViewValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewCategory"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="8dp"
        tools:text="editValue"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCategory" />

    <TextView
        android:id="@+id/textViewCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCategory"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:layout_toEndOf="@+id/textViewValue"
        android:gravity="center"
        android:text="@string/currency"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewValue"
        app:layout_constraintStart_toEndOf="@+id/textViewValue"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCategory" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/imageViewCategory"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:padding="8dp"
        tools:text="editCategory"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValue" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCategory"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="8dp"
        tools:text="editDate"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.992"
        app:layout_constraintStart_toEndOf="@+id/textViewCategory"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView

        android:id="@+id/imageViewMoneyHolder"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@+id/textViewValue"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewMoneyHolder"
        app:layout_constraintEnd_toStartOf="@+id/textViewMoneyHolder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCategory"
        tools:src="@drawable/ic_add"
        android:contentDescription="@string/description" />

    <TextView
        android:id="@+id/textViewMoneyHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCurrency"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/imageViewMoneyHolder"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="8dp"
        tools:text="editTypeOfValue"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewMoneyHolder"
        app:layout_constraintTop_toBottomOf="@+id/textViewCategory" />

    <TextView
        android:id="@+id/textViewComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewMoneyHolder"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:ellipsize="end"
        android:hint="@string/bottomEditOperationHintComment"
        android:maxLines="1"
        android:padding="8dp"
        tools:text="editComment"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMoneyHolder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/textViewComment"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewComment">

        <ImageView
            android:id="@+id/imageViewEdit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/description"/>

        <ImageView
            android:id="@+id/imageViewCopy"
            android:contentDescription="@string/description"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_copy" />

        <ImageView
            android:contentDescription="@string/description"
            android:id="@+id/imageViewDelete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_delete" />

    </LinearLayout>

</RelativeLayout>